--- a/public/style.css
+++ b/public/style.css
@@ -31,7 +31,7 @@ body {
   background-color: #fff;
   border: 1px solid #e5e5e5;
   border-radius: 5px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.05)
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
 .form-profile {
@@ -41,7 +41,7 @@ body {
   background-color: #fff;
   border: 1px solid #e5e5e5;
   border-radius: 5px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.05)
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
 .span-with-margin {
