--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,8 @@ body {
 }
 
 .form-signin {
+  position: relative;
+  top: 200px;
   max-width: 300px;
   padding: 19px 29px 29px;
   margin: 0 auto 20px;
