--- a/public/style.css
+++ b/public/style.css
@@ -25,6 +25,26 @@ body {
 }
 
 .form-signin {
+  max-width: 300px;
+  padding: 19px 29px 29px;
+  margin: 0 auto 20px;
+  background-color: #fff;
+  border: 1px solid #e5e5e5;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+.form-profile {
+  max-width: 600px;
+  padding: 19px 29px 29px;
+  margin: 0 auto 20px;
+  background-color: #fff;
+  border: 1px solid #e5e5e5;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+/* .form-signin {
   position: relative;
   top: 200px;
   max-width: 300px;
@@ -44,7 +64,7 @@ body {
   border: 1px solid #e5e5e5;
   border-radius: 5px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-}
+} */
 
 .span-with-margin {
   margin-right: 5px;
